<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="_boolean">Boolean</string>

    <string name="_false">False</string>

    <string name="_float">Float</string>

    <string name="_int">Int</string>

    <string name="_long">Long</string>

    <string name="_string">String</string>

    <string name="_true">True</string>

    <string name="app_name">Essentials</string>

    <string name="auto_complete">Auto Complete</string>

    <string name="available">Available</string>

    <string name="backdrop">Backdrop</string>

    <string name="blocked">Blocked</string>

    <string name="capabilities">Capabilities</string>

    <string name="checkable">Checkable</string>

    <string name="chips">Chips</string>

    <string name="date">Date</string>

    <string name="draggable">Draggable</string>

    <string name="editable">Editable</string>

    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>

    <string name="filter">Filter</string>

    <string name="firebase">Firebase</string>

    <string name="future">Future</string>

    <string name="hideable">Hideable</string>

    <string name="hint">Hint</string>

    <string name="io">I/O</string>

    <string name="keyboard">Keyboard</string>

    <string name="latitude">Latitude</string>

    <string name="link_properties">Link Properties</string>

    <string name="location">Location</string>

    <string name="longitude">Longitude</string>

    <string name="mandatory">Mandatory</string>

    <string name="network">Network</string>

    <string name="offline">Offline</string>

    <string name="online">Online</string>

    <string name="past">Past</string>

    <string name="repository">Repository</string>

    <string name="selection_required">Selection Required</string>

    <string name="settings">Settings</string>

    <string name="shared_preferences">Shared Preferences</string>

    <string name="single_selection">Single Selection</string>

    <string name="skip_collapsed">Skip Collapsed</string>

    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>

    <string name="text_input">Text Input</string>

    <string name="time">Time</string>
    <string name="time_to_live">Time to Live</string>

    <string name="token">Token</string>

    <string name="uuid">UUID</string>

    <string name="validate">Validate</string>
</resources>
