<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/autoComplete"
            android:title="@string/auto_complete" />
        <item
            android:id="@+id/backdrop"
            android:title="@string/backdrop" />
        <item
            android:id="@+id/chips"
            android:title="@string/chips" />
        <item
            android:id="@+id/firebase"
            android:title="@string/firebase" />
        <item
            android:id="@+id/date"
            android:title="@string/date" />
        <item
            android:id="@+id/location"
            android:title="@string/location" />
        <item
            android:id="@+id/network"
            android:title="@string/network" />
        <item
            android:id="@+id/sharedPreferences"
            android:title="@string/shared_preferences" />
        <item
            android:id="@+id/textInput"
            android:title="@string/text_input" />
        <item
            android:id="@+id/time"
            android:title="@string/time" />
    </group>
</menu>