<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/autoComplete"
        android:name="androidx.essentials.playground.autocomplete.AutoCompleteActivity"
        android:label="@string/auto_complete"
        tools:layout="@layout/activity_auto_complete" />

    <fragment
        android:id="@+id/backdrop"
        android:name="androidx.essentials.playground.backdrop.BackdropActivity"
        android:label="@string/backdrop"
        tools:layout="@layout/activity_backdrop" />

    <fragment
        android:id="@+id/chips"
        android:name="androidx.essentials.playground.chips.ChipsActivity"
        android:label="@string/chips"
        tools:layout="@layout/activity_chips" />

    <fragment
        android:id="@+id/home"
        android:name="androidx.essentials.playground.home.HomeActivity"
        android:label="@string/app_name"
        tools:layout="@layout/activity_home" />

    <fragment
        android:id="@+id/firebase"
        android:name="androidx.essentials.playground.firebase.FirebaseActivity"
        android:label="@string/firebase"
        tools:layout="@layout/activity_firebase" />

    <fragment
        android:id="@+id/date"
        android:name="androidx.essentials.playground.date.DateActivity"
        android:label="@string/date"
        tools:layout="@layout/activity_date" />

    <fragment
        android:id="@+id/location"
        android:name="androidx.essentials.playground.location.LocationActivity"
        android:label="@string/location"
        tools:layout="@layout/activity_location" />

    <fragment
        android:id="@+id/network"
        android:name="androidx.essentials.playground.network.NetworkActivity"
        android:label="@string/network"
        tools:layout="@layout/activity_network" />

    <fragment
        android:id="@+id/sharedPreferences"
        android:name="androidx.essentials.playground.preferences.SharedPreferencesActivity"
        android:label="@string/shared_preferences"
        tools:layout="@layout/activity_shared_preferences" />

    <fragment
        android:id="@+id/textInput"
        android:name="androidx.essentials.playground.textinput.TextInputActivity"
        android:label="@string/text_input"
        tools:layout="@layout/activity_text_input" />

    <fragment
        android:id="@+id/time"
        android:name="androidx.essentials.playground.time.TimeActivity"
        android:label="@string/time"
        tools:layout="@layout/activity_time" />
</navigation>