<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="androidx.essentials.playground.auto_complete.AutoCompleteViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="?actionBarSize"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            tools:layout_marginVertical="0dp">

            <androidx.essentials.playground.view.AutoComplete
                android:id="@+id/autoComplete"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:filter="@{viewModel.filter}"
                android:hint="@string/auto_complete"
                android:inputType="textCapWords"
                app:array="@{viewModel.libraries}"
                app:editable="@{viewModel.isEditable}"
                app:helperText="@{viewModel.autoComplete.title}"
                app:listItem="@android:layout/simple_list_item_1"
                app:mandatory="@{viewModel.isMandatory}"
                app:mandatoryMessage="@string/mandatory_field"
                app:regexMessage="@string/invalid_input"
                app:selection="@={viewModel.autoComplete}"
                app:showSoftInputOnFocus="@{viewModel.keyboard}" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.isEditable}"
                    android:text="@string/editable" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.filter}"
                    android:text="@string/filter" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.isHintEnabled}"
                    android:text="@string/hint" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.keyboard}"
                    android:text="@string/keyboard" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.isMandatory}"
                    android:text="@string/mandatory" />
            </com.google.android.material.chip.ChipGroup>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:text="@string/validate"
            app:icon="@drawable/ic_check_24dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>