<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Network"
            type="androidx.essentials.playground.network.Network" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        tools:paddingVertical="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp">

            <androidx.essentials.io.TextInput
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/available"
                android:inputType="textCapSentences"
                app:editable="false"
                app:text="@{Network.isAvailable}"
                app:visible="@{Network.isAvailable != null}" />

            <androidx.essentials.io.TextInput
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/blocked"
                app:editable="false"
                app:text="@{Network.isBlocked}"
                app:visible="@{Network.isBlocked != null}" />

            <androidx.essentials.io.TextInput
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/capabilities"
                app:editable="false"
                app:text="@{Network.capabilities}"
                app:visible="@{Network.capabilities != null}" />

            <androidx.essentials.io.TextInput
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/link_properties"
                app:editable="false"
                app:text="@{Network.linkProperties}"
                app:visible="@{Network.linkProperties != null}" />

            <androidx.essentials.io.TextInput
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/time_to_live"
                app:editable="false"
                app:text="@{Network.maxTimeToLive}"
                app:visible="@{Network.maxTimeToLive != null}" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>